--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.dev.js",
-    "test": "jest",
+    "test": "jest --watchAll --verbose --coverage",
     "test:dev": "jest --watchAll --verbose"
   },
   "author": "",
